public/modules/core/css/core.css
/* Colors ////
/ Red: D45C46
/ Blue: BAE2E1
/ Goldish: F7E366
/ Tan: F9CE80
/ Off white: FCF0E3

Shadow:-webkit-box-shadow: 0 5px 6px -6px #999;
       -moz-box-shadow: 0 5px 6px -6px #999;
            box-shadow: 0 5px 6px -6px #999;
};
////////////*/
@import url(http://fonts.googleapis.com/css?family=Raleway);

body {
	overflow-x: hidden;
	background-color: #FCF0E3;
}

p, body {
	font-family: 'Raleway', sans-serif;
	font-size: 1.3em;
	letter-spacing: 0.5px;
}

h1, h2, h3, h4{
	font-family: 'Novecento Wide Medium', sans-serif;
	text-transform: uppercase;

}

span.letter-space{
	display: inline;
	margin-left: 3px;
}

.navbar{
	background: #D45C46;
	padding: 3vh 0 3vh 0;
	-webkit-box-shadow: 0 5px 6px -6px #999;
       -moz-box-shadow: 0 5px 6px -6px #999;
            box-shadow: 0 5px 6px -6px #999;

}



.navbar-inverse .navbar-nav > li > a{
	color: #fff;
}

.navbar-inverse{
	border: transparent;
}

#logo{
	width: 12vw;
	height: auto;
	margin:-10px 0 0 0;

}


.content {
	margin-top: 90px;
}
.undecorated-link:hover {
	text-decoration: none;
}
[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
	display: none !important;
}
.ng-invalid.ng-dirty {
	border-color: #FA787E;
}
.ng-valid.ng-dirty {
	border-color: #78FA89;
}
.browsehappy.jumbotron.hide,
body.ng-cloak
{
	display: block;
}
 
.jumbotron {
	padding-bottom: 0px; 
	margin: -50px -20vw 25px -20vw;
}

.food-title {
	background: rgba(247,227,102,.8);
	position: relative;
	top: -41px;
	padding: 10px 10px 10px 10px;
	overflow: hidden;
}

.list-group-item {
	height: 230px;
}

footer {
	height: auto;
	width: 100vw;
	background-color: #BAE2E1;
	margin-top: 30px;
	padding: 40px;
}

